clusters/sirius/apps/totp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: totp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: totp
  template:
    metadata:
      labels:
        app: totp
    spec:
      containers:
      - name: totp
        image: 2fauth/2fauth
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: 2fauth-volume
          mountPath: /2fauth
        resources: # Add resource limits as needed
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: 2fauth-volume
        hostPath:
          path: /mnt/totp
          type: DirectoryOrCreate
