clusters/sirius/apps/totp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: totp
spec:
  selector:
    app: totp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
