clusters/sirius/apps/totp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: totp
  namespace: totp
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
  - hosts:
    - totp.sirius.moonblade.work
    secretName: totp-cert
  rules:
  - host: totp.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: totp
            port:
              name: http
